# rdp2

./: .gitignore  Cargo.toml  README.md  rdp2.pyi
.github/workflows/: CI.yml
bench/: bench.py
python/: bench.py  example.py  test_data.txt
src/: lib.rs  objects.rs
