[package]
name = "rdp2"
version = "1.1.0"
edition = "2024"
description = "A high-performance Python library for the Ramer-Douglass-Peucker algorithm implemented in Rust "
maintainers = [
    {name = "Vassilij Nadarajah", email = "packages@vassilijnadarajah.de"}
]
license = "GPL-3.0-only"

[lib]
name = "rdp2"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
