[package]
name = "rdp2"
version = "1.1.2"
edition = "2024"
description = "A high-performance Python library for the Ramer-Douglass-Peucker algorithm implemented in Rust"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["rdp", "ramer", "douglas", "peucker", "line", "simplification", "rust"]
repository = "https://github.com/vassilijnadarajah/rdp2"

[lib]
name = "rdp2"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
